--- a/web/index.html
+++ b/web/index.html
@@ -406,6 +406,7 @@ permalink: "{{ page.filePathStem }}.html"
         <li class="active"><a href="#scala_1" data-toggle="tab">Scala</a></li>
         <li><a href="#java_1" data-toggle="tab">Java</a></li>
         <li><a href="#kotlin_1" data-toggle="tab">Kotlin</a></li>
+        <li><a href="#clojure_1" data-toggle="tab">Clojure</a></li>
       </ul>
       <div class="tab-content">
         <div class="tab-pane active" id="scala_1">
@@ -437,6 +438,16 @@ val iris = read.arff("iris.arff")
 val rf = randomForest(Formula.lhs("class"), iris)
 println("OOB error = ${rf.error()}")
 
+          </code></pre>
+          </div>
+          <div class="caption">Random Forest</div>
+        </div>
+        <div class="tab-pane" id="clojure_1">
+          <div class="code" style="text-align: left;">
+          <pre class="prettyprint lang-clj"><code>
+(let [iris (read-arff "data/weka/iris.arff")
+      model (random-forest (Formula/lhs "class") iris)]
+  (.error model))
           </code></pre>
           </div>
           <div class="caption">Random Forest</div>
