rename PlotGroup -> PlotGrid

--- a/web/visualization.html
+++ b/web/visualization.html
@@ -172,7 +172,7 @@ permalink: "{{ page.filePathStem }}.html"
         <div class="tab-pane" id="java_4">
             <div class="code" style="text-align: left;">
           <pre class="prettyprint lang-java"><code>
-    var canvas = PlotGroup.of(iris, "class", '*');
+    var canvas = PlotGrid.of(iris, "class", '*');
     canvas.window();
           </code></pre>
             </div>
