add doc on vega

--- a/web/visualization.html
+++ b/web/visualization.html
@@ -1038,7 +1038,7 @@ permalink: "{{ page.filePathStem }}.html"
     <div id="btnv">
         <span class="btn-arrow-left">&larr; &nbsp;</span>
         <a class="btn-prev-text" href="data.html" title="Previous Section: Data"><span>Data</span></a>
-        <a class="btn-next-text" href="classification.html" title="Next Section: Classification"><span>Classification</span></a>
+        <a class="btn-next-text" href="vegalite.html" title="Next Section: Declarative Visualization"><span>Declarative Visualization</span></a>
         <span class="btn-arrow-right">&nbsp;&rarr;</span>
     </div>
 </div>
