remove CAS doc link

--- a/web/vegalite.html
+++ b/web/vegalite.html
@@ -6,7 +6,7 @@ permalink: "{{ page.filePathStem }}.html"
 
 <div class="col-md-9 col-md-pull-3">
 
-    <h1 id="visualization-top" class="title">Declarative Visualization</h1>
+    <h1 id="visualization-top" class="title">Declarative Data Visualization</h1>
 
     <p>In previous section, we show how to visualize data in imperative way.
        Smile also support data visualization in declarative approach.
