--- a/web/visualization.html
+++ b/web/visualization.html
@@ -6,7 +6,7 @@ permalink: "{{ page.filePathStem }}.html"
 
 <div class="col-md-9 col-md-pull-3">
 
-    <h1 id="visualization-top" class="title">Visualization</h1>
+    <h1 id="visualization-top" class="title">Data Visualization</h1>
 
     <p>A picture is worth a thousand words. In machine learning, we usually handle
         high-dimensional data, which is impossible to draw on display directly. But
