--- a/web/index.html
+++ b/web/index.html
@@ -9,6 +9,9 @@ permalink: "{{ page.filePathStem }}.html"
       <li><a href="https://github.com/haifengl/smile/releases/tag/v2.3.0">Smile 2.3.0 Released!</a>
         <span class="small">(Apr 1st, 2020)</span></li>
 
+      <li><a href="https://sudonull.com/post/28015-ML-on-Scala-with-a-smile-for-those-who-are-not-afraid-of-experiments-Yulas-blog">ML on Scala with a Smile</a>
+        <span class="small">(May 22, 2019)</span></li>
+
       <li><a href="https://www.youtube.com/watch?v=aqT_0qFOBUI">Dex Machine Learning with SMILE ML</a>
         <span class="small">(Mar 28, 2018, by Patrick Martin)</span></li>
 
