--- a/web/index.html
+++ b/web/index.html
@@ -188,7 +188,8 @@ permalink: "{{ page.filePathStem }}.html"
         <a href="api/java/smile/manifold/IsoMap.html">IsoMap</a>,
         <a href="api/java/smile/manifold/LLE.html">LLE</a>,
         <a href="api/java/smile/manifold/LaplacianEigenmap.html">Laplacian Eigenmap</a>,
-        <a href="api/java/smile/manifold/TSNE.html">t-SNE</a>
+        <a href="api/java/smile/manifold/TSNE.html">t-SNE</a>,
+        <a href="api/java/smile/manifold/UMAP.html">UMAP</a>
       </p></dd>
 
       <dt><a href="api/scala/index.html#smile.mds.package">Multi-Dimensional Scaling</a></dt>
