--- a/web/manifold.html
+++ b/web/manifold.html
@@ -325,6 +325,7 @@ permalink: "{{ page.filePathStem }}.html"
 
     <ul class="nav nav-tabs">
         <li class="active"><a href="#scala_7" data-toggle="tab">Scala</a></li>
+        <li><a href="#java_7" data-toggle="tab">Java</a></li>
         <li><a href="#kotlin_7" data-toggle="tab">Kotlin</a></li>
     </ul>
     <div class="tab-content">
@@ -336,6 +337,15 @@ permalink: "{{ page.filePathStem }}.html"
              perplexity: Double = 20.0,
              eta: Double = 200.0,
              iterations: Int = 1000): TSNE
+    </code></pre>
+            </div>
+        </div>
+        <div class="tab-pane" id="java_7">
+            <div class="code" style="text-align: left;">
+    <pre class="prettyprint lang-java"><code>
+    public class TSNE {
+        public TSNE(double[][] X, int d, double perplexity, double eta, int iterations);
+    }
     </code></pre>
             </div>
         </div>
