--- a/web/manifold.html
+++ b/web/manifold.html
@@ -384,7 +384,7 @@ permalink: "{{ page.filePathStem }}.html"
     pc.setProjection(50)
     val x50 = pc.project(x)
     val sne = tsne(x50, 3, 20, 200, 1000)
-    plot(sne.coordinates, y, 'o', Palette.COLORS)
+    show(plot(sne.coordinates, y, 'o'))
     </code></pre>
             </div>
         </div>
@@ -402,7 +402,7 @@ permalink: "{{ page.filePathStem }}.html"
     var perplexity = 20;
     var tsne = new TSNE(X, 2, perplexity, 200, 1000);
 
-    var canvas = ScatterPlot.of(tsne.coordinates, labels, '@', Palette.COLORS).canvas();
+    var canvas = ScatterPlot.of(tsne.coordinates, labels, '@', Palette).canvas();
     canvas.setTitle("t-SNE of MNIST");
     canvas.window();
           </code></pre>
@@ -413,6 +413,140 @@ permalink: "{{ page.filePathStem }}.html"
     <div style="width: 100%; display: inline-block; text-align: center;">
         <img src="images/tsne.png" class="enlarge" style="width: 480px;" />
         <div class="caption" style="min-width: 480px;">t-SNE</div>
+    </div>
+
+    <h2 id="umap">UMAP</h2>
+
+    <p>Uniform Manifold Approximation and Projection can be used for
+        visualization similarly to t-SNE, but also for general non-linear
+        dimension reduction. The algorithm is founded on three assumptions
+        about the data:</p>
+ 
+    <ol>
+      <li>The data is uniformly distributed on a Riemannian manifold;</li>
+      <li>The Riemannian metric is locally constant (or can be approximated as such);</li>
+      <li>The manifold is locally connected.</li>
+    </ol>
+ 
+    <p>From these assumptions it is possible to model the manifold with a fuzzy
+        topological structure. The embedding is found by searching for a low
+        dimensional projection of the data that has the closest possible
+        equivalent fuzzy topological structure.</p>
+
+    <ul class="nav nav-tabs">
+        <li class="active"><a href="#scala_9" data-toggle="tab">Scala</a></li>
+        <li><a href="#java_9" data-toggle="tab">Java</a></li>
+        <li><a href="#kotlin_9" data-toggle="tab">Kotlin</a></li>
+    </ul>
+    <div class="tab-content">
+        <div class="tab-pane active" id="scala_9">
+            <div class="code" style="text-align: left;">
+    <pre class="prettyprint lang-scala"><code>
+    def umap(data: Array[Array[Double]],
+             k: Int = 15,
+             d: Int = 2,
+             iterations: Int = 0,
+             learningRate: Double = 1.0,
+             minDist: Double = 0.1,
+             spread: Double = 1.0,
+             negativeSamples: Int = 5,
+             repulsionStrength: Double = 1.0): UMAP
+    </code></pre>
+            </div>
+        </div>
+        <div class="tab-pane" id="java_9">
+            <div class="code" style="text-align: left;">
+    <pre class="prettyprint lang-java"><code>
+    public class UAMP {
+        public of(double[][] data,
+                  int k,
+                  int d,
+                  int iterations,
+                  double learningRate,
+                  double minDist,
+                  double spread,
+                  int negativeSamples,
+                  double repulsionStrength);
+    }
+    </code></pre>
+            </div>
+        </div>
+        <div class="tab-pane" id="kotlin_9">
+            <div class="code" style="text-align: left;">
+    <pre class="prettyprint lang-kotlin"><code>
+    fun umap(data: Array&lt;DoubleArray&gt;,
+             k: Int = 15,
+             d: Int = 2,
+             iterations: Int = 0,
+             learningRate: Double = 1.0,
+             minDist: Double = 0.1,
+             spread: Double = 1.0,
+             negativeSamples: Int = 5,
+             repulsionStrength: Double = 1.0): UMAP
+    </code></pre>
+            </div>
+        </div>
+    </div>
+
+    <p>where <code>data</code> is the input data, <code>k</code> is of
+        k-nearest neighbors. Larger values result in more global views
+        of the manifold, while smaller values result in more local data
+        being preserved. <code>d</code> is the target embedding dimensions.
+        <code>iterations</code> is the number of iterations to optimize the
+        low-dimensional representation. Larger values result in more
+        accurate embedding. Muse be greater than 10. Choose wise value
+        based on the size of the input data, e.g, 200 for large
+        data (1000+ samples), 500 for small.
+        <code>learningRate</code> is the initial learning rate for the
+        embedding optimization.
+        <code>minDist</code> is the desired separation between close points
+        in the embedding space. Smaller values will result in a more
+        clustered/clumped embedding where nearby points on the manifold are
+        drawn closer together, while larger values will result on a more even
+        disperse of points. The value should be set no-greater than
+        and relative to the spread value, which determines the scale
+        at which embedded points will be spread out.
+        <code>spread</code> is the effective scale of embedded points.
+        In combination with <code>minDist</code>, this determines how
+        clustered/clumped the embedded points are.
+        <code>negativeSamples</code> is the number of negative samples to
+        select per positive sample in the optimization process. Increasing
+        this value will result in greater repulsive force being applied,
+        greater optimization cost, but slightly more accuracy.
+        <code>repulsionStrength</code>plied to negative samples in low
+        dimensional embedding optimization. Values higher than one will result
+        in greater weight being given to negative samples.</p>
+
+    <p>UMAP on the MNIST data is as follows.</p>
+
+    <ul class="nav nav-tabs">
+        <li class="active"><a href="#scala_10" data-toggle="tab">Scala</a></li>
+        <li><a href="#java_10" data-toggle="tab">Java</a></li>
+    </ul>
+    <div class="tab-content">
+        <div class="tab-pane active" id="scala_10">
+            <div class="code" style="text-align: left;">
+    <pre class="prettyprint lang-scala"><code>
+    val map = umap(x)
+    val canvas = plot(map.coordinates, map.index.map(i =&gt; y(i)), 'o')
+    show(canvas)
+    </code></pre>
+            </div>
+        </div>
+        <div class="tab-pane" id="java_10">
+            <div class="code" style="text-align: left;">
+          <pre class="prettyprint lang-java"><code>
+    var map = UMAP.of(mnist)
+    var y = Arrays.stream(map.index).map(i -&gt; labels[i]).toArray()
+    ScatterPlot.of(map.coordinates, y, '@').canvas().window()
+          </code></pre>
+            </div>
+        </div>
+    </div>
+
+    <div style="width: 100%; display: inline-block; text-align: center;">
+        <img src="images/umap.png" class="enlarge" style="width: 480px;" />
+        <div class="caption" style="min-width: 480px;">UMAP</div>
     </div>
 
     <div id="btnv">
