--- a/web/validation.html
+++ b/web/validation.html
@@ -792,6 +792,37 @@ permalink: "{{ page.filePathStem }}.html"
         regression, etc.). In those cases, we should NOT use parallel stream
         to avoid potential deadlock.</p>
 
+    <h2 id="model-selection">Model Selection Criteria</h2>
+    <p>Model selection is the task of selecting a statistical model from
+        a set of candidate models, given data. In the simplest cases,
+        a pre-existing set of data is considered. Given candidate models
+        of similar predictive or explanatory power, the simplest model is
+        most likely to be the best choice (Occam's razor).</p>
+ 
+    <p>A good model selection technique will balance goodness of fit with
+        simplicity. More complex models will be better able to adapt their
+        shape to fit the data, but the additional parameters may not represent
+        anything useful. Goodness of fit is generally determined using
+        a likelihood ratio approach, or an approximation of this, leading
+        to a chi-squared test. The complexity is generally measured by
+        counting the number of parameters in the model.</p>
+ 
+    <p>The most commonly used criteria are the Akaike information criterion
+        and the Bayesian information criterion, which are implemented in
+        <code>ModelSelection</code>. The formula for BIC is similar
+        to the formula for AIC, but with a different penalty for the number of
+        parameters. With AIC the penalty is <code>2k</code>, whereas with BIC
+        the penalty is <code>log(n) * k</code>.</p>
+ 
+    <p>AIC and BIC are both approximately correct according to a different goal
+        and a different set of asymptotic assumptions. Both sets of assumptions
+        have been criticized as unrealistic.</p>
+ 
+    <p>AIC is better in situations when a false negative finding would be
+        considered more misleading than a false positive, and BIC is better
+        in situations where a false positive is as misleading as, or more
+        misleading than, a false negative.</p>
+
     <div id="btnv">
         <span class="btn-arrow-left">&larr; &nbsp;</span>
         <a class="btn-prev-text" href="feature.html" title="Previous Section: Features"><span>Features</span></a>
