--- a/web/index.html
+++ b/web/index.html
@@ -151,7 +151,8 @@ permalink: "{{ page.filePathStem }}.html"
         <a href="api/java/smile/validation/MeanAbsoluteDeviation.html">Mean Absolute Deviation</a>,
         <a href="api/java/smile/validation/RandIndex.html">Rand Index</a>,
         <a href="api/java/smile/validation/AdjustedRandIndex.html">Adjusted Rand Index</a>,
-        <a href="api/scala/smile/validation/MutualInformationScore.html">Mutual Information Score</a>
+        <a href="api/scala/smile/validation/MutualInformationScore.html">Mutual Information Score</a>,
+        <a href="api/scala/smile/validation/Hyperparameters.html">Hyperparameter Tuning</a>
       </p></dd>
 
       <dt><a href="api/scala/index.html#smile.clustering.package">Clustering</a></dt>
