--- a/web/vegalite.html
+++ b/web/vegalite.html
@@ -10,7 +10,8 @@ permalink: "{{ page.filePathStem }}.html"
 
     <p>In previous section, we show how to visualize data in imperative way.
        Smile also support data visualization in declarative approach.
-       With <code>smile.plot.vega</code> package, we can create a specification
+       With <code>smile.plot.vega</code> package (in the artifact
+       <code>smile-scala</code>), we can create a specification
        that describes visualizations as mappings from data to properties
        of graphical marks (e.g., points or bars). The specification is
        based on <a href="https://vega.github.io/vega-lite/">Vega-Lite</a>.
